test/inference/good/coreml_polymorphic_type_annotations.mlt
type 'a t = { x : 'a }
let ['a] (f : 'a t -> 'a) = fun r -> r.x
