test/inference/bad/typeclass_use_r.mlt
class R 'a { read : unit -> 'a }
let r = read ()
